src/parse.rs
use crate::data::*;
use nom::branch::alt;
use nom::bytes::complete::tag;
use nom::character::complete::{char, digit1};
use nom::combinator::opt;
use nom::error::{Error, ErrorKind, ParseError};
use nom::number::complete::float;
use nom::sequence::{delimited, preceded, terminated, tuple};
use nom::{Err, IResult};
#[cfg(test)]
use pretty_assertions::assert_eq;
use unicode_segmentation::UnicodeSegmentation;
#[derive(Debug, PartialEq, Eq, Clone, Copy)]
pub struct InputState {
    disable_operation: bool,
    disable_relationship: bool,
    call_depth: i32,
}

impl InputState {
    pub fn new() -> Self {
        Self {
            disable_operation: false,
            disable_relationship: false,
            call_depth: 0,
        }
    }
}

pub fn expression(state: InputState, input: &str) -> IResult<&str, Expression> {
    eprintln!(
        "trying expression on {:?}, call depth is {:?}",
        input, state.call_depth
    );
    let state = InputState {
        disable_operation: state.disable_operation,
        disable_relationship: state.disable_relationship,
        call_depth: state.call_depth + 1,
    };
    if let Ok((tail, q)) = quantification(state, input) {
        Ok((tail, Expression::Q(Box::new(q))))
    } else if let Ok((tail, r)) = relationship(state, input) {
        Ok((tail, Expression::R(Box::new(r))))
    } else if let Ok((tail, o)) = operation(state, input) {
        Ok((tail, Expression::O(Box::new(o))))
    } else if let Ok((tail, f)) = function_call(state, input) {
        Ok((tail, Expression::F(Box::new(f))))
    } else if let Ok((tail, da)) = decorated(move |i| atom(state, i))(input) {
        Ok((tail, Expression::DA(Box::new(da))))
    } else if let Ok((tail, a)) = atom(state, input) {
        Ok((tail, Expression::A(Box::new(a))))
    } else if let Ok((tail, fr)) = folded_relationship(input) {
        Ok((tail, Expression::FR(Box::new(fr))))
    } else {
        // if state.disable_operation || state.disable_relationship {
        //     eprintln!("== retrying unrestricted expression");
        //     return expression(
        //         InputState {
        //             disable_operation: false,
        //             disable_relationship: false,
        //             call_depth: state.call_depth,
        //         },
        //         input,
        //     );
        // }
        Err(Err::Error(Error {
            code: ErrorKind::Alt,
            input: "",
        }))
    }
}

pub fn quantification(state: InputState, input: &str) -> IResult<&str, Quantification> {
    eprintln!("trying quantification on {:?}", input);
    let expression = |i| expression(state, i);
    let (tail, (quantifier, decos, _, expr)) =
        tuple((quantifier, decorations, whitespace, expression))(input)?;
    Ok((
        tail,
        Quantification {
            expression: expr,
            quantifier: Decorated::new(quantifier, decos),
        },
    ))
}

pub fn quantifier(input: &str) -> IResult<&str, Quantifier> {
    eprintln!("trying quantifier on {:?}", input);
    if let Ok((tail, _)) = alt::<_, _, Error<_>, _>((tag("∀"), tag("AA"), tag("forall")))(input) {
        Ok((tail, Quantifier::Universal))
    } else if let Ok((tail, _)) =
        alt::<_, _, Error<_>, _>((tag("∃"), tag("EE"), tag("exists")))(input)
    {
        if let Ok((tail, _)) = tag::<_, _, Error<_>>("!")(tail) {
            Ok((tail, Quantifier::UniquelyExistential))
        } else {
            Ok((tail, Quantifier::Existential))
        }
    } else {
        Err(Err::Error(Error {
            code: ErrorKind::Alt,
            input: "",
        }))
    }
}

pub fn folded_relationship(input: &str) -> IResult<&str, FoldedRelationship> {
    eprintln!("trying folded_relationship on {:?}", input);
    let state = InputState {
        disable_operation: false,
        disable_relationship: true,
        call_depth: 0,
    };
    let expression = |i| expression(state, i);
    let (tail, (_, neg, rel, _, rhs)) = tuple((
        opt(whitespace),
        opt(alt((tag("not"), tag("!")))),
        decorated(relation),
        opt(whitespace),
        expression,
    ))(input)?;
    Ok((
        tail,
        FoldedRelationship {
            relation: rel,
            negated: match neg {
                Some(_) => true,
                None => false,
            },
            rhs: rhs,
        },
    ))
}

pub fn relationship(state: InputState, input: &str) -> IResult<&str, Relationship> {
    if state.disable_relationship {
        return Err(Err::Error(Error {
            input: input,
            code: ErrorKind::IsNot,
        }));
    }
    eprintln!("trying relationship on {:?}", input);
    let expression_no_relationship = |i| {
        expression(
            InputState {
                disable_operation: state.disable_operation,
                disable_relationship: true,
                call_depth: state.call_depth,
            },
            i,
        )
    };
    let expression_relationship = |i| expression(state, i);
    let atom = |i| atom(state, i);
    // Special case to parse expr --(x->0)-> 4
    eprintln!("    trying --(->)-> special case");
    if let Ok((tail, (lhs, _, neg, _, pred, _, _, rhs))) = tuple((
        expression_no_relationship,
        opt(whitespace),
        opt(alt((tag("not"), tag("!")))),
        tag("--"),
        atom,
        tag("->"),
        opt(whitespace),
        expression_relationship,
    ))(input)
    {
        return Ok((
            tail,
            Relationship {
                lhs: lhs,
                negated: match neg {
                    Some(_) => true,
                    None => false,
                },
                relation: Decorated::new(
                    Relation::Tends,
                    Decorations {
                        sub: Some(pred),
                        sup: None,
                        under: None,
                        over: None,
                    },
                ),
                rhs: rhs,
            },
        ));
    }
    eprintln!("     trying regular");
    let (tail, (lhs, _, neg, rel, deco, _, rhs)) = tuple((
        expression_no_relationship,
        opt(whitespace),
        opt(alt((tag("not"), tag("!")))),
        relation,
        decorations,
        opt(whitespace),
        expression_relationship,
    ))(input)?;

    Ok((
        tail,
        Relationship {
            lhs: lhs,
            negated: match neg {
                Some(_) => true,
                None => false,
            },
            relation: Decorated::new(rel, deco),
            rhs: rhs,
        },
    ))
}

#[test]
pub fn test_relationship() {
    let state = InputState {
        disable_operation: false,
        disable_relationship: false,
        call_depth: 0,
    };
    assert_eq!(
        relationship(state, "x_n -> a => f(x_n) --(n -> oo)-> f(a)"),
        Ok((
            "",
            Relationship {
                lhs: Expression::DA(Box::new(Decorated {
                    decoratee: Atom::Name("x".into()),
                    decorations: Decorations {
                        under: None,
                        over: None,
                        sup: None,
                        sub: Some(Atom::Name("n".into())),
                    }
                })),
                negated: false,
                relation: Decorated::none(Relation::Tends),
                rhs: Expression::R(Box::new(Relationship {
                    lhs: Expression::DA(Box::new(Decorated::none(Atom::Name("a".into())))),
                    negated: false,
                    relation: Decorated::none(Relation::Implies),
                    rhs: Expression::R(Box::new(Relationship {
                        lhs: Expression::F(Box::new(FunctionCall {
                            caller: Decorated::none(Atom::Name("f".into())),
                            arguments: Expression::DA(Box::new(Decorated::sub(
                                Atom::Name("x".into()),
                                Atom::Name("n".into())
                            )))
                        })),
                        relation: Decorated::sub(
                            Relation::Tends,
                            Atom::Group(Group::Parenthesized(Expression::R(Box::new(
                                Relationship {
                                    lhs: Expression::DA(Box::new(Decorated::none(Atom::Name(
                                        "n".into()
                                    )))),
                                    relation: Decorated::none(Relation::Tends),
                                    negated: false,
                                    rhs: Expression::DA(Box::new(Decorated::none(Atom::Symbol(
                                        Symbol::Infinity
                                    )))),
                                }
                            ))))
                        ),
                        negated: false,
                        rhs: Expression::F(Box::new(FunctionCall {
                            caller: Decorated::none(Atom::Name("f".into())),
                            arguments: Expression::DA(Box::new(Decorated::none(Atom::Name(
                                "a".into()
                            ))))
                        }))
                    })),
                }))
            }
        ))
    );
    assert_eq!(
        relationship(state, "e !in E => f in F"),
        Ok((
            "",
            Relationship {
                lhs: Expression::DA(Box::new(Decorated::none(Atom::Name("e".into())))),
                relation: Decorated::none(Relation::ElementOf),
                negated: true,
                rhs: Expression::R(Box::new(Relationship {
                    lhs: Expression::DA(Box::new(Decorated::none(Atom::Name("E".into())))),
                    relation: Decorated::none(Relation::Implies),
                    negated: false,
                    rhs: Expression::R(Box::new(Relationship {
                        lhs: Expression::DA(Box::new(Decorated::none(Atom::Name("f".into())))),
                        relation: Decorated::none(Relation::ElementOf),
                        negated: false,
                        rhs: Expression::DA(Box::new(Decorated::none(Atom::Name("F".into()))))
                    }))
                }))
            }
        ))
    )
}

pub fn number(input: &str) -> IResult<&str, Number> {
    eprintln!("trying number on {:?}", input);
    if let Ok((tail, float)) = _float_only_when_comma(input) {
        Ok((tail, float))
    } else if let Ok((tail, (neg, number))) = tuple((opt(char('-')), digit1::<_, Error<_>>))(input)
    {
        Ok((
            tail,
            Number::Integer(
                number.parse::<i32>().unwrap()
                    * match neg {
                        Some(_) => -1,
                        None => 1,
                    },
            ),
        ))
    } else {
        Err(Err::Error(Error {
            code: ErrorKind::Digit,
            input: "",
        }))
    }
}

pub fn _float_only_when_comma(input: &str) -> IResult<&str, Number> {
    if !input.contains('.') {
        eprintln!("trying _float_only_when_comma on {:?}", input);
        return Err(Err::Error(Error {
            code: ErrorKind::Char,
            input: "",
        }));
    }

    let (tail, (neg, nb)) = tuple((opt(char('-')), float::<_, Error<_>>))(input)?;
    Ok((
        tail,
        Number::Float(
            nb * match neg {
                Some(_) => -1.0,
                None => 1.0,
            },
        ),
    ))
}

pub fn atom(state: InputState, input: &str) -> IResult<&str, Atom, Error<&str>> {
    eprintln!("trying atom on {:?}", input);
    if let Ok((tail, txt)) = text(input) {
        Ok((tail, Atom::Text(txt)))
    } else if let Ok((tail, number)) = number(input) {
        Ok((tail, Atom::Number(number)))
    } else if let Ok((tail, qty)) = quantity(input) {
        Ok((tail, Atom::Quantity(qty)))
    } else if let Ok((tail, bare_op)) = binary_operator(input) {
        Ok((tail, Atom::BareOperator(bare_op)))
    } else if let Ok((tail, symb)) = symbol(input) {
        Ok((tail, Atom::Symbol(symb)))
    } else if let Ok((tail, name)) = name(input) {
        Ok((tail, Atom::Name(name)))
    } else if let Ok((tail, grp)) = group(state, input) {
        Ok((tail, Atom::Group(grp)))
    } else {
        Err(Err::Error(Error {
            input: "",
            code: ErrorKind::Alt,
        }))
    }
}

pub fn name(input: &str) -> IResult<&str, String> {
    eprintln!("trying name on {:?}", input);
    let mut matched = String::from("");
    for grapheme in input.graphemes(true) {
        eprintln!("               current grapheme is {:?}", grapheme);
        if grapheme.chars().any(|c| c.is_alphabetic()) {
            matched += grapheme;
        } else {
            return if matched.len() == 0 {
                Err(Err::Error(Error {
                    input: input,
                    code: ErrorKind::Alpha,
                }))
            } else {
                Ok((&input[matched.len()..], matched))
            };
        }
    }
    Ok(("", matched))
}

#[test]
pub fn test_atom() {
    let state = InputState {
        disable_operation: false,
        disable_relationship: false,
        call_depth: 0,
    };
    assert_eq!(atom(state, "alpha"), Ok(("", Atom::Name("alpha".into()))));
    assert_eq!(atom(state, "abc87"), Ok(("87", Atom::Name("abc".into()))));
    assert_eq!(
        atom(state, "65486.848pal"),
        Ok(("pal", Atom::Number(Number::Float(65486.848))))
    );
    assert_eq!(
        atom(state, r#"(int_0^1 sum e in o"R") not= _|_"#),
        Ok((
            " not= _|_",
            Atom::Group(Group::Parenthesized(Expression::R(Box::new(
                Relationship {
                    lhs: Expression::O(Box::new(Operation {
                        lhs: None,
                        operator: Decorated::new(
                            Operator::Big(BigOperator::Integral),
                            Decorations {
                                sub: Some(Atom::Number(Number::Integer(0))),
                                sup: Some(Atom::Number(Number::Integer(0))),
                                under: None,
                                over: None
                            }
                        ),
                        rhs: Some(Expression::O(Box::new(Operation {
                            lhs: None,
                            operator: Decorated::none(Operator::Big(BigOperator::Sum)),
                            rhs: Some(Expression::A(Box::new(Atom::Name("e".into())))),
                        })))
                    })),
                    negated: false,
                    relation: Decorated::none(Relation::ElementOf),
                    rhs: Expression::A(Box::new(Atom::Text(Text {
                        font: TextFont::BlackboardBold,
                        content: "R".into(),
                    })))
                }
            ))))
        ))
    );
}

pub fn text(input: &str) -> IResult<&str, Text> {
    eprintln!("trying text on {:?}", input);
    let (tail, (maybe_font, content)) = tuple((opt(text_font), quoted_string))(input)?;
    Ok((
        tail,
        Text {
            content: content,
            font: match maybe_font {
                Some(f) => f,
                None => TextFont::Normal,
            },
        },
    ))
}

#[test]
pub fn test_text() {
    assert_eq!(
        text(r#"o"R \"forall\""  is the set of real numbers."#),
        Ok((
            "  is the set of real numbers.",
            Text {
                content: "R \"forall\"".into(),
                font: TextFont::BlackboardBold,
            }
        ))
    );
    assert_eq!(
        text(r#""""""#),
        Ok((
            r#""""#,
            Text {
                content: "".into(),
                font: TextFont::Normal,
            }
        ))
    );
    assert_eq!(
        text("lim_(x->"),
        Err(Err::Error(Error {
            code: ErrorKind::Tag,
            input: "lim_(x->",
        }))
    );
}

pub fn quoted_string(input: &str) -> IResult<&str, String> {
    eprintln!("trying quoted_string on {:?}", input);
    delimited(tag("\""), _in_quotes, tag("\""))(input)
}

pub fn _in_quotes(input: &str) -> IResult<&str, String> {
    eprintln!("trying _in_quotes on {:?}", input);
    let mut content = String::new();
    let mut skip_delimiter = false;
    for (i, ch) in input.char_indices() {
        if ch == '\\' && !skip_delimiter {
            skip_delimiter = true
        } else if ch == '"' && !skip_delimiter {
            return Ok((&input[i..], content));
        } else {
            content.push(ch);
            skip_delimiter = false;
        }
    }
    Err(Err::Incomplete(nom::Needed::Unknown))
}

pub fn text_font(input: &str) -> IResult<&str, TextFont> {
    eprintln!("trying text_font on {:?}", input);
    match_enum_variants_to_literals(
        input,
        vec![
            (TextFont::Caligraphic, vec!["c"]),
            (TextFont::Fraktur, vec!["f"]),
            (TextFont::BlackboardBold, vec!["o", "bb"]),
            (TextFont::Bold, vec!["b"]),
            (TextFont::Sans, vec!["s"]),
            (TextFont::Monospace, vec!["m", "tt"]),
            (TextFont::Normal, vec!["n"]),
            (TextFont::Italic, vec!["i"]),
            (TextFont::Script, vec!["s"]),
            (TextFont::MathOperator, vec!["op"]),
        ],
    )
}

pub fn group(state: InputState, input: &str) -> IResult<&str, Group> {
    eprintln!("trying group on {:?}", input);
    let expression = move |i| expression(state, i);
    if let Ok((tail, expr)) = surrounded(expression, "{", "}", true)(input) {
        Ok((tail, Group::Braced(expr)))
    } else if let Ok((tail, expr)) = surrounded(expression, "(", ")", true)(input) {
        Ok((tail, Group::Parenthesized(expr)))
    } else if let Ok((tail, expr)) = surrounded(expression, "[", "]", true)(input) {
        Ok((tail, Group::Bracketed(expr)))
    } else if let Ok((tail, expr)) = surrounded(expression, "]", "[", false)(input) {
        Ok((tail, Group::OpenRange(expr)))
    } else if let Ok((tail, expr)) = surrounded(expression, "[", "[", false)(input) {
        Ok((tail, Group::RightOpenRange(expr)))
    } else if let Ok((tail, expr)) = surrounded(expression, "]", "]", false)(input) {
        Ok((tail, Group::LeftOpenRange(expr)))
    } else if let Ok((tail, expr)) = surrounded(expression, "|]", "[|", false)(input) {
        Ok((tail, Group::OpenIntegerRange(expr)))
    } else if let Ok((tail, expr)) = surrounded(expression, "|]", "|]", false)(input) {
        Ok((tail, Group::LeftOpenIntegerRange(expr)))
    } else if let Ok((tail, expr)) = surrounded(expression, "[|", "[|", false)(input) {
        Ok((tail, Group::RightOpenIntegerRange(expr)))
    } else if let Ok((tail, expr)) = surrounded(expression, "[|", "|]", true)(input) {
        Ok((tail, Group::WhiteBracketed(expr)))
    } else if let Ok((tail, expr)) = surrounded(expression, "<", ">", false)(input) {
        Ok((tail, Group::AngleBracketed(expr)))
    } else if let Ok((tail, expr)) = surrounded(expression, "|", "|", true)(input) {
        Ok((tail, Group::AbsoluteValue(expr)))
    } else if let Ok((tail, expr)) = surrounded(expression, "||", "||", true)(input) {
        Ok((tail, Group::Norm(expr)))
    } else {
        Err(Err::Error(Error {
            code: ErrorKind::Alt,
            input: "",
        }))
    }
}

pub fn surrounded<'a, F: 'a, O, E: ParseError<&'a str>>(
    f: F,
    opening: &'static str,
    closing: &'static str,
    allow_whitespace: bool,
) -> impl Fn(&'a str) -> IResult<&'a str, O, E>
where
    F: Fn(&'a str) -> IResult<&'a str, O, E>,
{
    move |input| delimited(tag(opening), &f, tag(closing))(input)
}

pub fn decorated<'a, F: 'a, O>(f: F) -> impl Fn(&'a str) -> IResult<&'a str, Decorated<O>>
where
    F: Fn(&'a str) -> IResult<&'a str, O>,
{
    move |input| match tuple((&f, decorations))(input) {
        Ok((tail, (thing, decorations))) => Ok((
            tail,
            Decorated {
                decoratee: thing,
                decorations: decorations,
            },
        )),
        Err(e) => Err(e),
    }
}

pub fn whitespace(input: &str) -> IResult<&str, &str> {
    eprintln!("trying whitespace on {:?}", input);
    let mut tail_starts_at = 0;
    for grapheme in input.graphemes(true) {
        if grapheme != " " {
            break;
        }
        tail_starts_at += 1;
    }
    if tail_starts_at == 0 {
        Err(Err::Error(Error {
            code: ErrorKind::NoneOf,
            input: "",
        }))
    } else {
        let (parsed, tail) = input.split_at(tail_starts_at);
        Ok((tail, parsed))
    }
}

pub fn quantity(input: &str) -> IResult<&str, Quantity> {
    eprintln!("trying quantity on {:?}", input);
    let (tail, (value, _, u)) = tuple((number, whitespace, unit))(input)?;
    Ok((
        tail,
        Quantity {
            unit: Box::new(u),
            value: value,
        },
    ))
}

#[test]
pub fn test_quantity() {
    assert_eq!(
        quantity("352.8 µS/s*m^2@"),
        Ok((
            "@",
            Quantity {
                value: Number::Float(352.8),
                unit: Box::new(Unit::Ratio(
                    Box::new(Unit::Prefixed(UnitPrefix::Micro, FundamentalUnit::Siemens)),
                    Box::new(Unit::Product(
                        Box::new(Unit::Fundamental(FundamentalUnit::Second)),
                        Box::new(Unit::Power(
                            Box::new(Unit::Fundamental(FundamentalUnit::Meter)),
                            Atom::Number(Number::Integer(2)),
                        ))
                    )),
                ))
            }
        ))
    )
}

pub fn unit(input: &str) -> IResult<&str, Unit> {
    eprintln!("trying unit on {:?}", input);
    if let Ok((tail, (a, _, b))) = tuple((_unit_no_bin_op, char('*'), unit))(input) {
        Ok((tail, Unit::Product(Box::new(a), Box::new(b))))
    } else if let Ok((tail, (a, _, b))) = tuple((_unit_no_bin_op, char('/'), unit))(input) {
        Ok((tail, Unit::Ratio(Box::new(a), Box::new(b))))
    } else {
        _unit_no_bin_op(input)
    }
}

pub fn _unit_no_bin_op(input: &str) -> IResult<&str, Unit> {
    eprintln!("trying _unit_no_bin_op on {:?}", input);
    if let Ok((tail, (u, _, pow))) = tuple((_unit_no_op, char('^'), |i| {
        atom(
            InputState {
                disable_operation: false,
                disable_relationship: false,
                call_depth: 0,
            },
            i,
        )
    }))(input)
    {
        Ok((tail, Unit::Power(Box::new(u), pow)))
    } else {
        _unit_no_op(input)
    }
}

pub fn _unit_no_op(input: &str) -> IResult<&str, Unit> {
    eprintln!("trying _unit_no_op on {:?}", input);
    if let Ok((tail, (prefix, fundamental))) = tuple((unit_prefix, fundamental_unit))(input) {
        Ok((tail, Unit::Prefixed(prefix, fundamental)))
    } else if let Ok((tail, u)) = fundamental_unit(input) {
        Ok((tail, Unit::Fundamental(u)))
    } else {
        Err(Err::Error(Error {
            code: ErrorKind::Alt,
            input: "",
        }))
    }
}

#[test]
pub fn test_unit() {
    assert_eq!(
        unit("MeV*km^-1, "),
        Ok((
            ", ",
            Unit::Product(
                Box::new(Unit::Prefixed(
                    UnitPrefix::Mega,
                    FundamentalUnit::ElectronVolt
                )),
                Box::new(Unit::Power(
                    Box::new(Unit::Prefixed(UnitPrefix::Kilo, FundamentalUnit::Meter)),
                    Atom::Number(Number::Integer(-1)),
                ))
            )
        ))
    )
}

pub fn unit_prefix(input: &str) -> IResult<&str, UnitPrefix> {
    eprintln!("trying unit_prefix on {:?}", input);
    match_enum_variants_to_literals(
        input,
        vec![
            (UnitPrefix::Nano, vec!["n"]),
            (UnitPrefix::Micro, vec!["µ", "micro", "mu"]),
            (UnitPrefix::Deca, vec!["da"]),
            (UnitPrefix::Milli, vec!["m"]),
            (UnitPrefix::Deci, vec!["d"]),
            (UnitPrefix::Centi, vec!["c"]),
            (UnitPrefix::Hecto, vec!["h"]),
            (UnitPrefix::Kilo, vec!["k"]),
            (UnitPrefix::Mega, vec!["M"]),
            (UnitPrefix::Giga, vec!["G"]),
            (UnitPrefix::Tera, vec!["T"]),
            (UnitPrefix::Peta, vec!["P"]),
        ],
    )
}

pub fn fundamental_unit(input: &str) -> IResult<&str, FundamentalUnit> {
    eprintln!("trying fundamental_unit on {:?}", input);
    match_enum_variants_to_literals(
        input,
        vec![
            (FundamentalUnit::CelsisusDegree, vec!["°C", "°c"]),
            (FundamentalUnit::FarenheitDegree, vec!["°F"]),
            (FundamentalUnit::FrenchDegree, vec!["°fH", "°f"]),
            (FundamentalUnit::Degree, vec!["°"]),
            (FundamentalUnit::Radian, vec!["rad"]),
            (FundamentalUnit::MeterOfHydrogen, vec!["mHg"]),
            (FundamentalUnit::Meter, vec!["m"]),
            (FundamentalUnit::Gram, vec!["g"]),
            (FundamentalUnit::Mole, vec!["mol"]),
            (FundamentalUnit::Second, vec!["s"]),
            (FundamentalUnit::Kelvin, vec!["K"]),
            (FundamentalUnit::Liter, vec!["L"]),
            (FundamentalUnit::Farad, vec!["F"]),
            (FundamentalUnit::Henry, vec!["H"]),
            (FundamentalUnit::ElectronVolt, vec!["eV"]),
            (FundamentalUnit::Lux, vec!["lux"]),
            (FundamentalUnit::Ampere, vec!["A"]),
            (FundamentalUnit::Volt, vec!["V"]),
            (FundamentalUnit::Ohm, vec!["Ohm", "ohm", "Ω"]),
            (FundamentalUnit::Bar, vec!["bar"]),
            (FundamentalUnit::Atmosphere, vec!["atm"]),
            (FundamentalUnit::Pascal, vec!["Pa"]),
            (FundamentalUnit::Joule, vec!["J"]),
            (FundamentalUnit::Watt, vec!["W"]),
            (FundamentalUnit::Siemens, vec!["S"]),
        ],
    )
}

pub fn operation(state: InputState, input: &str) -> IResult<&str, Operation> {
    if state.disable_operation {
        return Err(Err::Error(Error {
            input: input,
            code: ErrorKind::IsNot,
        }));
    }
    let expression_no_operation = move |i| {
        expression(
            InputState {
                disable_operation: true,
                disable_relationship: state.disable_relationship,
                call_depth: state.call_depth,
            },
            i,
        )
    };
    let expression_operation = move |i| expression(state, i);
    eprintln!("trying operation on {:?}", input);
    if let Ok((tail, (lhs, operator, decorations, rhs))) = tuple((
        terminated(expression_no_operation, whitespace),
        binary_operator,
        decorations,
        preceded(whitespace, expression_operation),
    ))(input)
    {
        Ok((
            tail,
            Operation {
                lhs: Some(lhs),
                operator: Decorated::new(Operator::Binary(operator), decorations),
                rhs: Some(rhs),
            },
        ))
    } else if let Ok((tail, (operator, decorations, rhs))) = tuple((
        preceded(whitespace, prefix_operator),
        decorations,
        terminated(expression_operation, whitespace),
    ))(input)
    {
        Ok((
            tail,
            Operation {
                lhs: None,
                operator: Decorated::new(Operator::Prefix(operator), decorations),
                rhs: Some(rhs),
            },
        ))
    } else if let Ok((tail, (lhs, operator, decorations))) = tuple((
        preceded(whitespace, expression_operation),
        postfix_operator,
        terminated(decorations, whitespace),
    ))(input)
    {
        Ok((
            tail,
            Operation {
                lhs: Some(lhs),
                operator: Decorated::new(Operator::Postfix(operator), decorations),
                rhs: None,
            },
        ))
    } else if let Ok((tail, (operator, decorations, rhs))) = tuple((
        big_operator,
        decorations,
        terminated(expression_operation, whitespace),
    ))(input)
    {
        Ok((
            tail,
            Operation {
                lhs: None,
                operator: Decorated::new(Operator::Big(operator), decorations),
                rhs: Some(rhs),
            },
        ))
    } else {
        Err(nom::Err::Error(Error {
            code: ErrorKind::Alt,
            input: "",
        }))
    }
}

pub fn decorations(input: &str) -> IResult<&str, Decorations> {
    eprintln!("trying decorations on {:?}", input);
    let atom = |i| {
        atom(
            InputState {
                disable_operation: false,
                disable_relationship: false,
                call_depth: 0,
            },
            i,
        )
    };
    let (tail, (under, over, sub, sup)) = tuple((
        opt(preceded(tag("__"), atom)),
        opt(preceded(tag("^^"), atom)),
        opt(preceded(tag("_"), atom)),
        opt(preceded(tag("^"), atom)),
    ))(input)?;

    Ok((
        tail,
        Decorations {
            sub,
            sup,
            under,
            over,
        },
    ))
}

#[test]
pub fn test_decorations() {
    assert_eq!(
        decorations(r#"__8^^m"good stuff right therre!!! amirite^4???"_(x->0)88"#),
        Ok((
            "88",
            Decorations {
                under: Some(Atom::Number(Number::Integer(8))),
                over: Some(Atom::Text(Text {
                    font: TextFont::Monospace,
                    content: String::from("good stuff right therre!!! amirite^4???")
                })),
                sub: Some(Atom::Group(Group::Parenthesized(Expression::R(Box::new(
                    Relationship {
                        lhs: Expression::DA(Box::new(Decorated {
                            decoratee: Atom::Name("x".to_string()),
                            decorations: Decorations::none(),
                        })),
                        rhs: Expression::DA(Box::new(Decorated {
                            decoratee: Atom::Number(Number::Integer(0)),
                            decorations: Decorations::none(),
                        })),
                        relation: Decorated::none(Relation::Tends),
                        negated: false,
                    }
                ))))),
                sup: None,
            }
        ))
    )
}

pub fn relation(input: &str) -> IResult<&str, Relation> {
    eprintln!("trying relation on {:?}", input);
    match_enum_variants_to_literals(
        input,
        vec![
            (Relation::Implies, vec!["=>", "⇒"]),
            (Relation::Iff, vec!["<=>", "⇔", "iff"]),
            (Relation::ImpliedBy, vec!["⇐", "=<", "impliedby"]),
            (
                Relation::Congruent,
                vec!["=-", "-=", "==", "congruent", "cong", "congru"],
            ),
            (Relation::MapsTo, vec!["|->", "↦", "mapsto"]),
            (Relation::GreaterOrEqual, vec![">=", "≥"]),
            (Relation::LessOrEqual, vec!["<=", "≤"]),
            (Relation::Equals, vec!["="]),
            (Relation::Greater, vec![">"]),
            (Relation::Less, vec!["<"]),
            (Relation::Tends, vec!["->"]),
            (Relation::Subset, vec!["subset", "included", "cc", "⊂"]),
            (
                Relation::Superset,
                vec!["supset", "superset", "includes", "))", "⊃"],
            ),
            (Relation::ElementOf, vec!["in", "∈", "€"]),
            (Relation::EquivalentTo, vec!["~"]),
        ],
    )
}

pub fn operator(input: &str) -> IResult<&str, Operator> {
    eprintln!("trying operator on {:?}", input);
    if let Ok((tail, op)) = binary_operator(input) {
        Ok((tail, Operator::Binary(op)))
    } else if let Ok((tail, op)) = prefix_operator(input) {
        Ok((tail, Operator::Prefix(op)))
    } else if let Ok((tail, op)) = postfix_operator(input) {
        Ok((tail, Operator::Postfix(op)))
    } else if let Ok((tail, op)) = big_operator(input) {
        Ok((tail, Operator::Big(op)))
    } else {
        Err(Err::Error(Error {
            code: ErrorKind::Alt,
            input: "",
        }))
    }
}

pub fn binary_operator(input: &str) -> IResult<&str, BinaryOperator> {
    eprintln!("trying binary_operator on {:?}", input);
    match_enum_variants_to_literals(input, vec![(BinaryOperator::Addition, vec!["+"])])
}

#[test]
pub fn test_binary_operator() {
    assert_eq!(binary_operator("+"), Ok(("", BinaryOperator::Addition)));
    assert_eq!(
        prefix_operator("hmmmmmm"),
        Err(nom::Err::Error(Error {
            code: ErrorKind::Alt,
            input: ""
        }))
    );
}
